// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFileDetailsHTML > should handle file with minimal metadata (nulls) 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/minimal.ts</span>
    </div>
    
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">100</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">Unknown</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">Unknown</span>
    </div>
  "
`;

exports[`buildFileDetailsHTML > should render commit message without siblings 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  
          <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
        
            <div style="margin-bottom: 12px;">
              <div style="font-size: 11px; color: #888; margin-bottom: 4px;">
                Commit: <span style="color: #4a9eff; font-family: monospace;">def456a</span>
              </div>
              <div style="font-size: 12px; color: #ddd; font-style: italic; line-height: 1.4;">
                "Fix critical bug in parser"
              </div>
            </div>
          
          </div>
        "
`;

exports[`buildFileDetailsHTML > should render commit siblings without commit message 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  
          <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
        
            <div style="font-size: 12px; font-weight: 600; color: #4a9eff; margin-bottom: 8px;">
              Commit Siblings (1 file)
            </div>
            <div style="font-size: 11px;">
          
              <div style="padding: 4px 0; color: #ccc; border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
                /src/app.ts
              </div>
            
            </div>
          
          </div>
        "
`;

exports[`buildFileDetailsHTML > should render complete file details with all data present 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    <div class="info-row">
      <span class="label">View on GitHub</span>
      <span class="value"><a href="https://github.com/test/repo/blob/main/src/utils/test.ts" target="_blank" style="color: #4a9eff; text-decoration: none;">🔗 Open file</a></span>
    </div>
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  
          <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
        
            <div style="margin-bottom: 12px;">
              <div style="font-size: 11px; color: #888; margin-bottom: 4px;">
                Commit: <span style="color: #4a9eff; font-family: monospace;">abc123d</span>
              </div>
              <div style="font-size: 12px; color: #ddd; font-style: italic; line-height: 1.4;">
                "Add new utility function for data transformation"
              </div>
            </div>
          
            <div style="font-size: 12px; font-weight: 600; color: #4a9eff; margin-bottom: 8px;">
              Commit Siblings (2 files)
            </div>
            <div style="font-size: 11px;">
          
              <div style="padding: 4px 0; color: #ccc; border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
                /src/utils/helper.ts
              </div>
            
              <div style="padding: 4px 0; color: #ccc; border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
                /src/index.ts
              </div>
            
            </div>
          
          </div>
        
            <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
              <div style="font-size: 12px; font-weight: 600; color: #4a9eff; margin-bottom: 8px;">
                📊 Coupling Cluster
              </div>
              <div style="font-size: 11px; color: #ccc; margin-bottom: 12px; padding-left: 12px;">
                Utilities Cluster (15 files)
              </div>
          
              <div style="font-size: 12px; font-weight: 600; color: #4a9eff; margin-bottom: 8px;">
                🔗 Most Frequently Changes With
              </div>
              <div style="font-size: 11px;">
            
                <div style="padding: 4px 0; color: #ccc; border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
                  <div style="display: flex; justify-content: space-between; align-items: center;">
                    <span style="color: #ddd;">parser.ts</span>
                    <span style="color: #888; font-size: 10px;">42 co-changes</span>
                  </div>
                  <div style="font-size: 10px; color: #888; margin-top: 2px;">
                    85% coupling strength
                  </div>
                </div>
              
                <div style="padding: 4px 0; color: #ccc; border-bottom: 1px solid rgba(255, 255, 255, 0.05);">
                  <div style="display: flex; justify-content: space-between; align-items: center;">
                    <span style="color: #ddd;">validator.ts</span>
                    <span style="color: #888; font-size: 10px;">28 co-changes</span>
                  </div>
                  <div style="font-size: 10px; color: #888; margin-top: 2px;">
                    62% coupling strength
                  </div>
                </div>
              
              </div>
            
            </div>
          "
`;

exports[`buildFileDetailsHTML > should render coupling cluster with no edges 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  
            <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
              <div style="font-size: 12px; font-weight: 600; color: #4a9eff; margin-bottom: 8px;">
                📊 Coupling Cluster
              </div>
              <div style="font-size: 11px; color: #ccc; margin-bottom: 12px; padding-left: 12px;">
                Isolated Cluster (1 files)
              </div>
          
            </div>
          "
`;

exports[`buildFileDetailsHTML > should render file details without GitHub URL 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  "
`;

exports[`buildFileDetailsHTML > should render file details without commit info 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    <div class="info-row">
      <span class="label">View on GitHub</span>
      <span class="value"><a href="https://github.com/test/repo/blob/main/src/utils/test.ts" target="_blank" style="color: #4a9eff; text-decoration: none;">🔗 Open file</a></span>
    </div>
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  "
`;

exports[`buildFileDetailsHTML > should render file details without coupling data 1`] = `
"
    <div class="info-row">
      <span class="label">Type</span>
      <span class="value">File</span>
    </div>
    <div class="info-row">
      <span class="label">Path</span>
      <span class="value">/src/utils/test.ts</span>
    </div>
    <div class="info-row">
      <span class="label">View on GitHub</span>
      <span class="value"><a href="https://github.com/test/repo/blob/main/src/utils/test.ts" target="_blank" style="color: #4a9eff; text-decoration: none;">🔗 Open file</a></span>
    </div>
    <div class="info-row">
      <span class="label">Lines of Code</span>
      <span class="value">250</span>
    </div>
    <div class="info-row">
      <span class="label">Extension</span>
      <span class="value">.ts</span>
    </div>
    <div class="info-row">
      <span class="label">Last Modified</span>
      <span class="value">Oct 15, 2025</span>
    </div>
    <div class="info-row">
      <span class="label">Last Author</span>
      <span class="value">John Doe</span>
    </div>
    <div class="info-row">
      <span class="label">Last Commit</span>
      <span class="value">abc123d</span>
    </div>
    <div class="info-row">
      <span class="label">Churn (Lifetime)</span>
      <span class="value">15 commits</span>
    </div>
    <div class="info-row">
      <span class="label">Contributors (Lifetime)</span>
      <span class="value">3</span>
    </div>
    <div class="info-row">
      <span class="label">File Age</span>
      <span class="value">3 years (Old)</span>
    </div>
    <div class="info-row">
      <span class="label">Recent Activity (90 days)</span>
      <span class="value">120 lines changed</span>
    </div>
    <div class="info-row">
      <span class="label">Avg Change Size (Lifetime)</span>
      <span class="value">25 lines/commit</span>
    </div>
    <div class="info-row">
      <span class="label">Last Touched</span>
      <span class="value">8 days ago</span>
    </div>
  
          <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
        
            <div style="margin-bottom: 12px;">
              <div style="font-size: 11px; color: #888; margin-bottom: 4px;">
                Commit: <span style="color: #4a9eff; font-family: monospace;">abc123d</span>
              </div>
              <div style="font-size: 12px; color: #ddd; font-style: italic; line-height: 1.4;">
                "Update test file"
              </div>
            </div>
          
          </div>
        "
`;
